--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,8 @@
 
 html {
 	background: whitesmoke;
+	
+	min-widths: 1024px;
 }
 
 body {
